[gd_scene load_steps=2 format=3 uid="uid://rq8dlyspro46"]

[ext_resource type="Script" uid="uid://d12gcorahcjrx" path="res://scripts/track.gd" id="1_s1rm4"]

[node name="Track" type="Node2D"]
script = ExtResource("1_s1rm4")

[node name="Sleeper1" type="Line2D" parent="."]
z_index = -1
position = Vector2(-6, -5)
points = PackedVector2Array(0, 0, 0, 10)
width = 2.0
default_color = Color(0.316029, 0.210545, 0.0370625, 1)

[node name="Sleeper2" type="Line2D" parent="."]
z_index = -1
position = Vector2(-2, -5)
points = PackedVector2Array(0, 0, 0, 10)
width = 2.0
default_color = Color(0.316029, 0.210545, 0.0370625, 1)

[node name="Sleeper3" type="Line2D" parent="."]
z_index = -1
position = Vector2(2, -5)
points = PackedVector2Array(0, 0, 0, 10)
width = 2.0
default_color = Color(0.316029, 0.210545, 0.0370625, 1)

[node name="Sleeper4" type="Line2D" parent="."]
z_index = -1
position = Vector2(6, -5)
points = PackedVector2Array(0, 0, 0, 10)
width = 2.0
default_color = Color(0.316029, 0.210545, 0.0370625, 1)

[node name="Rail1" type="Line2D" parent="."]
position = Vector2(-8, 2)
points = PackedVector2Array(0, -4, 16, -4)
width = 1.0
default_color = Color(0.60933, 0.60933, 0.60933, 1)

[node name="Rail2" type="Line2D" parent="."]
position = Vector2(-8, 2)
points = PackedVector2Array(0, 0, 16, 0)
width = 1.0
default_color = Color(0.60933, 0.60933, 0.60933, 1)

[node name="Sleeper5" type="Line2D" parent="."]
visible = false
z_index = -1
position = Vector2(10, -5)
points = PackedVector2Array(0, 0, 0, 10)
width = 2.0
default_color = Color(0.316029, 0.210545, 0.0370625, 1)

[node name="Sleeper6" type="Line2D" parent="."]
visible = false
z_index = -1
position = Vector2(-10, -5)
points = PackedVector2Array(0, 0, 0, 10)
width = 2.0
default_color = Color(0.316029, 0.210545, 0.0370625, 1)

[node name="LongRail1" type="Line2D" parent="."]
visible = false
position = Vector2(-11, 2)
points = PackedVector2Array(-1, -4, 23, -4)
width = 1.0
default_color = Color(0.60933, 0.60933, 0.60933, 1)

[node name="LongRail2" type="Line2D" parent="."]
visible = false
position = Vector2(-11, 6)
points = PackedVector2Array(-1, -4, 23, -4)
width = 1.0
default_color = Color(0.60933, 0.60933, 0.60933, 1)
